[package]
name = "reverse_proxy_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
rocket = {version="0.5.0", features = ["json"]}
tokio = "1.37.0"
jsonwebtoken = "=9.3.0"
serde = { version = "1.0.202", features = ["derive"] }
